// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`renders correctly (empty) 1`] = `
<div class="ais-InstantSearch">
</div>
`;

exports[`renders correctly (with slot used) 1`] = `
<div class="ais-InstantSearch">
  <div>
    Hi there, this is the main slot
  </div>
</div>
`;
